--- a/index.html
+++ b/index.html
@@ -21,19 +21,11 @@
     <button class="lights-button" id="lightsBtn">✨ LUCES MÁGICAS ✨</button>
 
     <div class="music-player">
-        <div class="music-header">🎵 MÚSICA NAVIDEÑA🎵</div>
-        <div class="song-item" data-song="0">🎄 </div>
-        <div class="song-item" data-song="1">🎅</div>
-        <div class="song-item" data-song="2">✨ </div>
-        <div class="song-item" data-song="3">🌟 </div>
-        <div class="song-item" data-song="4">💫 </div>
-        <div class="song-item" data-song="5">🎆 </div>
+        <div class="music-info" id="songTitle">🎵 Música de navidad</div>
         <div class="music-controls">
+            <button class="control-btn" id="prevBtn">⏮️</button>
             <button class="control-btn" id="playPauseBtn">▶️</button>
-            <button class="control-btn" id="stopBtn">⏹️</button>
-        </div>
-        <div class="volume-control">
-            <input type="range" class="volume-slider" id="volumeSlider" min="0" max="100" value="50">
+            <button class="control-btn" id="nextBtn">⏭️</button>
         </div>
     </div>
 
