--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
     <title>Para Valeska Viteri Alchundia - Navidad 2025</title>
     <link rel="stylesheet" href="gift.css">
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-FSD33FW1ET"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-FSD33FW1ET');
+</script>
 <body>
     <canvas id="canvas"></canvas>
     <div class="scanline"></div>
